# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added tls library for functions related to SSLv3 and TLS messages.
  Existing ssl-enum-ciphers, ssl-date, and tls-nextprotoneg scripts were
  updated to use this library. [Daniel Miller]

o [NSE] Add sstp-discover script to discover Microsoft's Secure Socket
  Tunnelling Protocol (http://msdn.microsoft.com/en-us/library/cc247338.aspx)
  [Niklaus Schiess]

o [NSE] Added unittest library and NSE script for adding unit tests to NSE
  libraries. See unittest.lua for examples, and run `nmap --script=unittest
  --script-args=unittest.run -d` to run the tests. [Daniel Miller]

o Updated bundled liblua from 5.2.2 to 5.2.3 (bugfix release) [Daniel Miller]

o Added version detection signatures and probes for a bunch of Android
  remote mouse/keyboard servers, including AndroMouse, AirHID,
  Wifi-mouse, and RemoteMouse. [Paul Hemberger]

o [NSE] Added allseeingeye-info for gathering information from games
  using this query protocol.  A version detection probe was also
  added. [Marin Maržić]

o [NSE] Add freelancer-info to gather information about the Freelancer
  game server. Also added a related version detection probe and UDP
  protocol payload for detecting the service. [Marin Maržić]

o [Ncat] Fixed compilation when --without-liblua is specified in
  configure (an #include needed an ifdef guard). [Quentin Glidic]

o [NSE] Add http-server-header script to grab the Server header as a last-ditch
  effort to get a software version. This can't be done as a softmatch because
  of the need to match non-HTTP services that obey some HTTP requests. [Daniel
  Miller]

o [NSE] Add rfc868-time script to get the date and time from an RFC 868 Time
  server. [Daniel Miller]

o [NSE] Add weblogic-t3-info script that detects the T3 RMI protocol used by
  Oracle/BEA Weblogic. Extracts the Weblogic version, as well [Alessandro
  Zanni, Daniel Miller]

o Fixed a bug in libdnet with handling interfaces with AF_LINK addresses on